fixed font on phone and overflow x

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,17 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @font-face {
-    font-family: 'Dhurjati';
-    src: url('./fonts/Dhurjati-Regular.ttf') format('truetype');
-    font-weight: 400;
-    font-display: swap;
+    font-family: 'Arial Black fallback';
+    src: url("./fonts/Arial Black.ttf");
 }
 
-@font-face {
-    font-family: 'Dhurjati-fallback';
-    src: local("Arial Black");
-    size-adjust: 0.667;
-    line-gap-override: 2.5;
+body {
+    overflow-x: hidden;
 }
